--- a/app/src/main/webapp/WEB-INF/web.xml
+++ b/app/src/main/webapp/WEB-INF/web.xml
@@ -16,16 +16,15 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- Security filter -->
-	<!--<filter>-->
-		<!--<filter-name>csrfFilter</filter-name>-->
-		<!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-		<!--<async-supported>true</async-supported>-->
-	<!--</filter>-->
-	<!--<filter-mapping>-->
-		<!--<filter-name>csrfFilter</filter-name>-->
-		<!--<url-pattern>/*</url-pattern>-->
-	<!--</filter-mapping>-->
+	<!-- Spring Security Filter -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- Spring MVC DispatcherServlet - Processes application requests -->
 	<servlet>
@@ -53,15 +52,15 @@
 	</welcome-file-list>
 
 	<!-- Log4j -->
-	<context-param>
-		<param-name>log4j-config</param-name>
-		<param-value>log4j.xml</param-value>
-	</context-param>
+	<!--<context-param>-->
+		<!--<param-name>log4j-config</param-name>-->
+		<!--<param-value>log4j.xml</param-value>-->
+	<!--</context-param>-->
 
 	<!-- Errors and exception handling -->
 	<error-page>
 		<error-code>404</error-code>
-		<location>/resources/404.html</location>
+		<location>/WEB-INF/views/404.jsp</location>
 	</error-page>
 	<error-page>
 		<exception-type>java.lang.Throwable</exception-type>
