--- a/app-ejb/pom.xml
+++ b/app-ejb/pom.xml
@@ -20,6 +20,14 @@
     </properties>
 
     <dependencies>
+        <!-- Servlet 3.1 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Import the CDI API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>javax.enterprise</groupId>
@@ -57,6 +65,75 @@
             <artifactId>ejb-api</artifactId>
             <version>3.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Deltaspike API. We use compile scope as we need compile against its API -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.deltaspike.core</groupId>-->
+            <!--<artifactId>deltaspike-core-api</artifactId>-->
+            <!--<version>0.6</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+
+        <!-- Deltaspike Impl. we use runtime scope as we need its implementation dependencies only on runtime -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.deltaspike.core</groupId>-->
+            <!--<artifactId>deltaspike-core-impl</artifactId>-->
+            <!--<version>0.6</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
+
+        <!-- Deltaspike Security Module API. We use compile scope as we need to compile against its API -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.deltaspike.modules</groupId>-->
+            <!--<artifactId>deltaspike-security-module-api</artifactId>-->
+            <!--<version>0.6</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+
+        <!-- Deltaspike Security Impl. we use runtime scope as we need its implementation dependencies only on runtime -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.deltaspike.modules</groupId>-->
+            <!--<artifactId>deltaspike-security-module-impl</artifactId>-->
+            <!--<version>0.6</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
+
+        <!-- Import the PicketLink API, we deploy this as library with the application, and can compile against it -->
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-api</artifactId>
+            <version>2.7.0.Final</version>
+        </dependency>
+
+
+        <!-- Import the PicketLink implementation, we deploy this as library with the application, but can't compile against it -->
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-impl</artifactId>
+            <version>2.7.0.Final</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- MySQL driver 5.1.36 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+
+        <!-- HSQLDB driver 2.3.1 -->
+        <!--<dependency>-->
+            <!--<groupId>org.hsqldb</groupId>-->
+            <!--<artifactId>hsqldb</artifactId>-->
+            <!--<version>2.3.1</version>-->
+        <!--</dependency>-->
+
+        <!-- Hibernate Core 4.3.5.Final -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.5.Final</version>
         </dependency>
 
         <!-- JUnit 4.12 -->
