--- a/app-ejb/src/main/webapp/WEB-INF/web.xml
+++ b/app-ejb/src/main/webapp/WEB-INF/web.xml
@@ -5,37 +5,74 @@
 
     <display-name>Logiweb EE - EJB/JSF</display-name>
 
-    <!--<context-param>-->
-        <!--<param-name>javax.faces.PROJECT_STAGE</param-name>-->
-        <!--<param-value>Development</param-value>-->
-    <!--</context-param>-->
-    <servlet>
-        <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.jsf</url-pattern>
-    </servlet-mapping>
-
-    <welcome-file-list>
-    <welcome-file>index.xhtml</welcome-file>
-    </welcome-file-list>
-
-    <!-- Log4j -->
-    <!--<context-param>-->
-    <!--<param-name>log4j-config</param-name>-->
-    <!--<param-value>log4j.xml</param-value>-->
-    <!--</context-param>-->
-
-    <!-- Errors and exception handling -->
+    <!-- Redirect any 500 Error Code to /error.jsf -->
     <!--<error-page>-->
-    <!--<error-code>404</error-code>-->
-    <!--<location>/WEB-INF/views/404.jsp</location>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/error.jsf</location>-->
     <!--</error-page>-->
-    <!--<error-page>-->
-    <!--<exception-type>java.lang.Throwable</exception-type>-->
-    <!--<location>/AppErrorHandler</location>-->
-    <!--</error-page>-->
+
+    <!-- Apply security to all pages -->
+    <!--<security-constraint>-->
+        <!--<display-name>secure resource</display-name>-->
+        <!--<web-resource-collection>-->
+            <!--<web-resource-name>welcome page</web-resource-name>-->
+            <!--<url-pattern>/*</url-pattern>-->
+        <!--</web-resource-collection>-->
+        <!--<auth-constraint>-->
+            <!--<role-name>guest</role-name>-->
+            <!--<role-name>admin</role-name>-->
+        <!--</auth-constraint>-->
+    <!--</security-constraint>-->
+
+    <!-- Configure form authentication -->
+    <!--<login-config>-->
+        <!--<auth-method>FORM</auth-method>-->
+        <!--<form-login-config>-->
+            <!--<form-login-page>/login.jsf</form-login-page>-->
+            <!--<form-error-page>/login-error.jsf</form-error-page>-->
+        <!--</form-login-config>-->
+    <!--</login-config>-->
+
+    <!-- Define application roles -->
+    <!--<security-role>-->
+        <!--<role-name>admin</role-name>-->
+    <!--</security-role>-->
+    <!--<security-role>-->
+        <!--<role-name>guest</role-name>-->
+    <!--</security-role>-->
+
+
+    <!--&lt;!&ndash;<context-param>&ndash;&gt;-->
+        <!--&lt;!&ndash;<param-name>javax.faces.PROJECT_STAGE</param-name>&ndash;&gt;-->
+        <!--&lt;!&ndash;<param-value>Development</param-value>&ndash;&gt;-->
+    <!--&lt;!&ndash;</context-param>&ndash;&gt;-->
+    <!--<servlet>-->
+        <!--<servlet-name>Faces Servlet</servlet-name>-->
+        <!--<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>Faces Servlet</servlet-name>-->
+        <!--<url-pattern>*.jsf</url-pattern>-->
+    <!--</servlet-mapping>-->
+
+    <!--<welcome-file-list>-->
+    <!--<welcome-file>index.xhtml</welcome-file>-->
+    <!--</welcome-file-list>-->
+
+    <!--&lt;!&ndash; Log4j &ndash;&gt;-->
+    <!--&lt;!&ndash;<context-param>&ndash;&gt;-->
+    <!--&lt;!&ndash;<param-name>log4j-config</param-name>&ndash;&gt;-->
+    <!--&lt;!&ndash;<param-value>log4j.xml</param-value>&ndash;&gt;-->
+    <!--&lt;!&ndash;</context-param>&ndash;&gt;-->
+
+    <!--&lt;!&ndash; Errors and exception handling &ndash;&gt;-->
+    <!--&lt;!&ndash;<error-page>&ndash;&gt;-->
+    <!--&lt;!&ndash;<error-code>404</error-code>&ndash;&gt;-->
+    <!--&lt;!&ndash;<location>/WEB-INF/views/404.jsp</location>&ndash;&gt;-->
+    <!--&lt;!&ndash;</error-page>&ndash;&gt;-->
+    <!--&lt;!&ndash;<error-page>&ndash;&gt;-->
+    <!--&lt;!&ndash;<exception-type>java.lang.Throwable</exception-type>&ndash;&gt;-->
+    <!--&lt;!&ndash;<location>/AppErrorHandler</location>&ndash;&gt;-->
+    <!--&lt;!&ndash;</error-page>&ndash;&gt;-->
 </web-app>
