add in-site styles + fix @Autowired + add db part for WS/RS

--- a/app-spring/src/main/webapp/WEB-INF/web.xml
+++ b/app-spring/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,17 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+    <!-- Apache CXF Servlet - Processes application requests to the SOAP and RESTful Web Services -->
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/services/*</url-pattern>
+    </servlet-mapping>
+
 	<!-- Spring MVC DispatcherServlet - Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
@@ -41,16 +52,6 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
-    <servlet>
-        <servlet-name>CXFServlet</servlet-name>
-        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/services/*</url-pattern>
-    </servlet-mapping>
 
 	<!-- Disables Servlet Container welcome file handling. Needed for compatibility with Servlet 3.0 and Tomcat 7.0 -->
 	<!--<welcome-file-list>-->
