--- a/app-spring/src/main/webapp/WEB-INF/web.xml
+++ b/app-spring/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/beans.xml, /WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/spring-ws-rs.xml, /WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -43,7 +43,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>/WEB-INF/spring/mvc-dispatcher-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 		<async-supported>true</async-supported>
@@ -53,20 +53,9 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- Disables Servlet Container welcome file handling. Needed for compatibility with Servlet 3.0 and Tomcat 7.0 -->
-	<!--<welcome-file-list>-->
-		<!--<welcome-file></welcome-file>-->
-	<!--</welcome-file-list>-->
-
 	<welcome-file-list>
 		<welcome-file>landing.html</welcome-file>
 	</welcome-file-list>
-
-	<!-- Log4j -->
-	<!--<context-param>-->
-		<!--<param-name>log4j-config</param-name>-->
-		<!--<param-value>log4j.xml</param-value>-->
-	<!--</context-param>-->
 
 	<!-- Errors and exception handling -->
 	<error-page>
