--- a/app-spring/pom.xml
+++ b/app-spring/pom.xml
@@ -13,8 +13,8 @@
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>4.1.7.RELEASE</spring.version>
-        <spring-security.version>4.0.1.RELEASE</spring-security.version>
+        <spring.version>4.2.0.RELEASE</spring.version>
+        <spring-security.version>4.0.2.RELEASE</spring-security.version>
         <hibernate.version>4.3.5.Final</hibernate.version>
     </properties>
 
@@ -55,13 +55,6 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- Spring TX -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-tx</artifactId>-->
-            <!--<version>${spring.version}</version>-->
-        <!--</dependency>-->
-
         <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -69,37 +62,16 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- MySQL driver 5.1.36 -->
+        <!-- Spring Test -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.36</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
         </dependency>
-
-        <!-- HSQLDB driver 2.3.1 -->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-
-        <!-- Hibernate Core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-
-        <!-- Hibernate Entity Manager -->
-        <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-entitymanager</artifactId>-->
-            <!--<version>${hibernate.version}</version>-->
-        <!--</dependency>-->
 
         <!-- Spring Security Web -->
-        <!-- This component integrates the Spring Security to the Servlet API.
-        We need it to plugin our security configuration in web application. -->
+        <!-- Integrates the Spring Security to the Servlet API, plugins our security configuration in web application. -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -112,6 +84,27 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
+        </dependency>
+
+        <!-- Spring Security Taglibs -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <!-- Hibernate Core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <!-- MySQL driver 5.1.36 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
         </dependency>
 
         <!-- Servlet 3.1 -->
@@ -136,13 +129,6 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
-        <!-- @Inject -->
-        <!--<dependency>-->
-            <!--<groupId>javax.inject</groupId>-->
-            <!--<artifactId>javax.inject</artifactId>-->
-            <!--<version>1</version>-->
-        <!--</dependency>-->
 
         <!-- Log4j 1.2.17 -->
         <dependency>
@@ -170,14 +156,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.12</version>
-        </dependency>
-
-        <!-- Spring Test -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- JUnit 4.12 -->
@@ -242,49 +220,7 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.6.0</version>
         </dependency>
-
-
-        <!-- CGLIB, only required and used for @Configuration usage -->
-        <!--<dependency>-->
-            <!--<groupId>cglib</groupId>-->
-            <!--<artifactId>cglib-nodep</artifactId>-->
-            <!--<version>2.2</version>-->
-        <!--</dependency>-->
-
-        <!-- AspectJ 1.7.4 -->
-        <!--<dependency>-->
-            <!--<groupId>org.aspectj</groupId>-->
-            <!--<artifactId>aspectjrt</artifactId>-->
-            <!--<version>1.7.4</version>-->
-        <!--</dependency>-->
     </dependencies>
-
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>org.springframework.maven.release</id>-->
-            <!--<name>Spring Maven Release Repository</name>-->
-            <!--<url>http://maven.springframework.org/release</url>-->
-            <!--<releases><enabled>true</enabled></releases>-->
-            <!--<snapshots><enabled>false</enabled></snapshots>-->
-        <!--</repository>-->
-
-        <!--&lt;!&ndash; For testing against latest Spring snapshots &ndash;&gt;-->
-        <!--<repository>-->
-            <!--<id>org.springframework.maven.snapshot</id>-->
-            <!--<name>Spring Maven Snapshot Repository</name>-->
-            <!--<url>http://maven.springframework.org/snapshot</url>-->
-            <!--<releases><enabled>false</enabled></releases>-->
-            <!--<snapshots><enabled>true</enabled></snapshots>-->
-        <!--</repository>-->
-
-        <!--&lt;!&ndash; For developing against latest Spring milestones &ndash;&gt;-->
-        <!--<repository>-->
-            <!--<id>org.springframework.maven.milestone</id>-->
-            <!--<name>Spring Maven Milestone Repository</name>-->
-            <!--<url>http://maven.springframework.org/milestone</url>-->
-            <!--<snapshots><enabled>false</enabled></snapshots>-->
-        <!--</repository>-->
-    <!--</repositories>-->
 
     <build>
         <finalName>logiweb-ee</finalName>
