--- a/app-spring/pom.xml
+++ b/app-spring/pom.xml
@@ -220,6 +220,13 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.6.0</version>
         </dependency>
+
+        <!-- JavaMail API - 1.5.4 -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
