--- a/app-spring/pom.xml
+++ b/app-spring/pom.xml
@@ -227,6 +227,21 @@
             <artifactId>javax.mail-api</artifactId>
             <version>1.5.4</version>
         </dependency>
+
+        <!-- Selenium -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.47.1</version>
+        </dependency>
+
+        <!-- Xml Apis - 1.4.01 (to work out this: java.lang.NoClassDefFoundError: org/w3c/dom/ElementTraversal) -->
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
+
     </dependencies>
 
     <build>
